--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,23 +7,22 @@ services:
    db:
      image: postgres
      environment:
-             POSTGRES_PASSWORD: pass
+      POSTGRES_PASSWORD: pass
      volumes:
       - './postgres/data:/var/lib/postgresql/data'
      ports:
       - '5432:5432'
      networks:
-      - net-db
+      - 'net-db'
    go_project:
-      image: go_project
       build:
         context: .
         dockerfile: Dockerfile
-        args:
-          IP: 0.0.0.0
-          PORT: 8000
-          POSTGRES_URL: db
-          POSTGRES_PASSWORD: pass
+      environment:
+        IP: 0.0.0.0
+        PORT: 8000
+        POSTGRES_URL: db
+        POSTGRES_PASSWORD: pass
       ports:
         - '8000:8000'
       depends_on:
